--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,6 @@ SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 SET(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 SET(CMAKE_BUILD_TYPE Release)
 
-add_executable (TECO teco.c mem.c msg.c common.c buffer.c levels.c context.c bitio.c arith.c arith_aux.c defs.h) 
-add_executable (TICO tico.c mem.c msg.c common.c buffer.c levels.c context.c bitio.c arith.c arith_aux.c defs.h) 
+add_executable (TECO teco.c mem.c msg.c alphabet.c common.c buffer.c levels.c context.c bitio.c arith.c arith_aux.c defs.h) 
+add_executable (TICO tico.c mem.c msg.c alphabet.c common.c buffer.c levels.c context.c bitio.c arith.c arith_aux.c defs.h) 
 
